package hk.edu.polyu.comp.comp3211.monopoly.controller;

public class EndGame implements IBase {
    /**
     * Print the game over message, and ask if the player want to restart, load or quit.
     */
    @Override
    public void terminal() {

    }
}
