package hk.edu.polyu.comp.comp3211.monopoly.model.squares;

import hk.edu.polyu.comp.comp3211.monopoly.model.Player;

/**
 * The Free-Parking square of the board
 */
public class Free implements ISquare{
    /**
     * Generate an effect to a player
     * <p>Free-Parking Effect:</p><ul>
     *   <li>None.</li></ul>
     * @param player dest. player
     */
    @Override
    public void execute(Player player) {
        
        }
}
