package hk.edu.polyu.comp.comp3211.monopoly.model.squares;

import hk.edu.polyu.comp.comp3211.monopoly.model.Player;

/**
 * The Go-to-Jail square of the board
 */
public class Oops implements ISquare{
    /**
     * Generate an effect to a player
     * <p>Go-to-Jail Effect:</p><ul>
     *   <li>The player immediately goes to Jail.</li></ul>
     * @param player dest. player
     */
    @Override
    public void execute(Player player) {

    }
}
