package hk.edu.polyu.comp.comp3211.monopoly.view;

import hk.edu.polyu.comp.comp3211.monopoly.model.Board;

public class Printer {
    /**
     * current game board
     */
    private Board board;

    public Printer(Board board) {
        this.board = board;
    }

    /**
     * Print out current game board
     */
    public void Print(){

    }
}
