@startuml

title __MONOPOLY's Class Diagram__\n

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    class hk.edu.polyu.comp.comp3211.monopoly.Main {
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace controller {
      class hk.edu.polyu.comp.comp3211.monopoly.controller.EndGame {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace controller {
      class hk.edu.polyu.comp.comp3211.monopoly.controller.Game {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace controller {
      interface hk.edu.polyu.comp.comp3211.monopoly.controller.IBase {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace controller {
      class hk.edu.polyu.comp.comp3211.monopoly.controller.StartMenu {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace model {
      class hk.edu.polyu.comp.comp3211.monopoly.model.Board {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace model {
      class hk.edu.polyu.comp.comp3211.monopoly.model.Player {
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace model {
      namespace squares {
        class hk.edu.polyu.comp.comp3211.monopoly.model.squares.Chance {
        }
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace model {
      namespace squares {
        class hk.edu.polyu.comp.comp3211.monopoly.model.squares.Free {
        }
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace model {
      namespace squares {
        class hk.edu.polyu.comp.comp3211.monopoly.model.squares.Go {
        }
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace model {
      namespace squares {
        interface hk.edu.polyu.comp.comp3211.monopoly.model.squares.ISquare {
        }
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace model {
      namespace squares {
        class hk.edu.polyu.comp.comp3211.monopoly.model.squares.Jail {
        }
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace model {
      namespace squares {
        class hk.edu.polyu.comp.comp3211.monopoly.model.squares.Oops {
        }
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace model {
      namespace squares {
        class hk.edu.polyu.comp.comp3211.monopoly.model.squares.Property {
        }
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace model {
      namespace squares {
        class hk.edu.polyu.comp.comp3211.monopoly.model.squares.Tax {
        }
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp3211.monopoly {
    namespace view {
      class hk.edu.polyu.comp.comp3211.monopoly.view.Printer {
      }
    }
  }
  

  hk.edu.polyu.comp.comp3211.monopoly.controller.EndGame .up.|> hk.edu.polyu.comp.comp3211.monopoly.controller.IBase
  hk.edu.polyu.comp.comp3211.monopoly.controller.Game .up.|> hk.edu.polyu.comp.comp3211.monopoly.controller.IBase
  hk.edu.polyu.comp.comp3211.monopoly.controller.Game o-- hk.edu.polyu.comp.comp3211.monopoly.model.Board : board
  hk.edu.polyu.comp.comp3211.monopoly.controller.Game o-- hk.edu.polyu.comp.comp3211.monopoly.view.Printer : printer
  hk.edu.polyu.comp.comp3211.monopoly.controller.StartMenu .up.|> hk.edu.polyu.comp.comp3211.monopoly.controller.IBase
  hk.edu.polyu.comp.comp3211.monopoly.model.squares.Chance .up.|> hk.edu.polyu.comp.comp3211.monopoly.model.squares.ISquare
  hk.edu.polyu.comp.comp3211.monopoly.model.squares.Free .up.|> hk.edu.polyu.comp.comp3211.monopoly.model.squares.ISquare
  hk.edu.polyu.comp.comp3211.monopoly.model.squares.Go .up.|> hk.edu.polyu.comp.comp3211.monopoly.model.squares.ISquare
  hk.edu.polyu.comp.comp3211.monopoly.model.squares.Jail .up.|> hk.edu.polyu.comp.comp3211.monopoly.model.squares.ISquare
  hk.edu.polyu.comp.comp3211.monopoly.model.squares.Oops .up.|> hk.edu.polyu.comp.comp3211.monopoly.model.squares.ISquare
  hk.edu.polyu.comp.comp3211.monopoly.model.squares.Property .up.|> hk.edu.polyu.comp.comp3211.monopoly.model.squares.ISquare
  hk.edu.polyu.comp.comp3211.monopoly.model.squares.Property o-- hk.edu.polyu.comp.comp3211.monopoly.model.Player : owner
  hk.edu.polyu.comp.comp3211.monopoly.model.squares.Tax .up.|> hk.edu.polyu.comp.comp3211.monopoly.model.squares.ISquare
  hk.edu.polyu.comp.comp3211.monopoly.view.Printer o-- hk.edu.polyu.comp.comp3211.monopoly.model.Board : board


right footer


COMP3211 Software Engineering Course Project: Monopoly, 2021 Fall
by Group 22: MAN Furui, LIU Sicheng, WANG Meng, XING Shiji
endfooter

@enduml
